plugins {
    id 'java'
    id 'test-report-aggregation'
    id 'jacoco-report-aggregation'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://maven.pkg.github.com/rebecca-odonoghue/cedar-java'
        credentials {
            username = System.getProperty('packages.user')
            password = System.getProperty('packages.token')
        }
    }
    maven {
        url = 'https://maven.pkg.github.com/UQ-PAC/RSVP'
        credentials {
            username = System.getProperty('packages.user')
            password = System.getProperty('packages.token')
        }
    }
}

dependencies {
    subprojects.each { sub -> 
        testReportAggregation project(':' + sub.name)
        jacocoAggregation project(':' + sub.name)
    };
}

reporting {
    reports {
        testAggregateTestReport(AggregateTestReport) { 
            testSuiteName = "test"
        }
        testSuiteCodeCoverageReport(JacocoCoverageReport) { 
            testSuiteName = "test"
        }
    }
}

test {
    finalizedBy testAggregateTestReport, testSuiteCodeCoverageReport // report is always generated after tests run
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'
    apply plugin: 'maven-publish'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url = 'https://maven.pkg.github.com/rebecca-odonoghue/cedar-java'
            credentials {
                username = System.getProperty('packages.user')
                password = System.getProperty('packages.token')
            }
        }
        maven {
            url = 'https://maven.pkg.github.com/UQ-PAC/RSVP'
            credentials {
                username = System.getProperty('packages.user')
                password = System.getProperty('packages.token')
            }
        }
    }

    dependencies {
        // Avoid log4j warnings
        // implementation("org.slf4j:slf4j-api:2.0.17")
        // implementation("org.slf4j:slf4j-simple:2.0.17")
        // Custom cedar-java fork (https://github.com/rebecca-odonoghue/cedar-java)
        implementation 'com.cedarpolicy:cedar-java:4.8.0-rsvp-4:uber'

        implementation 'com.google.code.gson:gson:2.13.2'
        implementation libs.guava
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
        implementation 'org.springframework.boot:spring-boot-starter-web:4.0.3'


        // Use JUnit Jupiter for testing.
        testImplementation libs.junit.jupiter
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        // Parameterised tests
        testImplementation "org.junit.jupiter:junit-jupiter-params:5.10.0"
        

    }

    // Apply a specific Java toolchain to ease working on different environments.
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    test {
        // Use JUnit Platform for unit tests.
        useJUnitPlatform()

        finalizedBy jacocoTestReport // report is always generated after tests run
    }

    jacocoTestReport {
        dependsOn test // tests are required to run before generating the report
    }

    publishing {
        repositories {
            maven {
                url = 'https://maven.pkg.github.com/UQ-PAC/RSVP'
                credentials {
                    username = System.getenv('GITHUB_ACTOR')
                    password = System.getenv('GITHUB_TOKEN')
                }
            }
        }
    }
}

